force-app/main/default/objects/cgcloud__Custom_Period__c/cgcloud__Custom_Period__c.object-meta.xml
<CustomObject>
    <description>This object holds the attributes of the custom period.</description>
    <label>Custom Period</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>