force-app/main/default/objects/cgcloud__Custom_Period__c/fields/cgcloud__Business_Year__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Business_Year__c</fullName>
    <description>Business year of the period.</description>
    <label>Business Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>