force-app/main/default/objects/cgcloud__Custom_Period__c/fields/cgcloud__Custom_Calendar__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Custom_Calendar__c</fullName>
    <description>Custom calendar to which the period belongs.</description>
    <label>Custom Calendar</label>
    <referenceTo>cgcloud__Custom_Calendar__c</referenceTo>
    <relationshipLabel>Custom Periods</relationshipLabel>
    <relationshipName>Custom_Periods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>