force-app/main/default/objects/cgcloud__Custom_Period__c/fields/cgcloud__Date_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date_From__c</fullName>
    <description>Start date of the period.</description>
    <label>Date From</label>
    <type>Date</type>
</CustomField>