force-app/main/default/objects/cgcloud__Custom_Period__c/fields/cgcloud__Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date_Thru__c</fullName>
    <description>End date of the period.</description>
    <label>Date Thru</label>
    <type>Date</type>
</CustomField>