force-app/main/default/objects/cgcloud__Custom_Period__c/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <description>Describes the sales organization to which the custom period belongs.</description>
    <formula>TEXT(cgcloud__Custom_Calendar__r.cgcloud__Sales_Org__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Org</label>
    <type>Text</type>
</CustomField>