force-app/main/default/objects/cgcloud__Custom_Period__c/fields/cgcloud__Short_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Short_Description__c</fullName>
    <description>Short Description based on the user specific language.</description>
    <formula>CASE($User.cgcloud__Language_Postfix__c,&quot;Language1&quot;, cgcloud__Short_Description_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(cgcloud__Short_Description_Language_2__c,cgcloud__Short_Description_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(cgcloud__Short_Description_Language_3__c,cgcloud__Short_Description_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(cgcloud__Short_Description_Language_4__c,cgcloud__Short_Description_Language_1__c),cgcloud__Short_Description_Language_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The first 10 characters entered here will help identify the custom period in Trade Calendars, Promotion P&amp;L, and other TPM views.</inlineHelpText>
    <label>Short Description</label>
    <type>Text</type>
</CustomField>