force-app/main/default/objects/cgcloud__Custom_Period__c/fields/cgcloud__Short_Description_Language_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Short_Description_Language_3__c</fullName>
    <description>Holds the short description for language 3.</description>
    <label>Short Description Language 3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>