force-app/main/default/objects/cgcloud__Custom_Period__c/fields/cgcloud__Time_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Time_Level__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Time_Level</valueSetName>
    </valueSet>
</CustomField>