force-app/main/default/objects/cgcloud__Custom_Period__c/validationRules/cgcloud__Avoid_Change_External_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Avoid_Change_External_ID</fullName>
    <active>true</active>
    <description>ExternalId cannot be edited if it has an existent value.</description>
    <errorConditionFormula>AND (
ISCHANGED(cgcloud__ExternalId__c),
NOT(ISBLANK(PRIORVALUE(cgcloud__ExternalId__c)))
)</errorConditionFormula>
    <errorDisplayField>cgcloud__ExternalId__c</errorDisplayField>
    <errorMessage>ExternalId cannot be edited if it has an existent value.</errorMessage>
</ValidationRule>